<resources>
    <string name="app_name">DrPatientAppointment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_doctor_profile">DoctorProfileActivity</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">CONFIRM</string>
    <string name="tel">Tel</string>
    <string name="birthday">Birthday</string>
    <string name="full_name">Full Name</string>
    <string name="google_signin_txt">Or Sign in with Google</string>
    <string name="signin_btn_clicked">Back to Login</string>
    <string name="create_account_unclicked">Create Account</string>
    <string name="my_patients">My Patients</string>
    <string name="patient_request">Patient Request</string>
    <string name="my_calendar">My Calendar</string>
    <string name="how_we_can_help_you_oday">How we can help you today?</string>
    <string name="appointment">Appointment</string>
    <string name="sign_out">SignOut</string>
    <string name="profile">Profile</string>
    <string name="dr_address">Dr Johnny Sins General Medic, 11 Avenue Hell str, Kuzimu</string>
    <string name="dr_email">dr.sins@gmail.com</string>
    <string name="dr_tel">+212 (0) 5 37 64 95 15</string>
    <string name="dr_about">About</string>
    <string name="about">About</string>
    <string name="patient">Patient</string>
    <string name="dr_name">Doctor Johnny</string>
    <string name="my_calendar_txt">My Calendar</string>
    <string name="medical_folder">Medical Folder</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="my_doctors">My Doctors</string>
    <string name="search">Search</string>
    <string name="welcome_user">Welcome User</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string-array name="form_type">
        <item>Consultation</item>
        <item>Hospitalisation</item>
    </string-array>
    <string-array name="specialty_spinner">
        <item>Dentist</item>
        <item>General practitioner</item>
        <item>ORL</item>
        <item>Ophthalmology</item>
        <item>Pediatric</item>
        <item>Radiology</item>
        <item>Rheumatology</item>
    </string-array>
    <string-array name="blood_spinner">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="physical_information">physical Information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="edit">edit</string>
    <string name="back">back</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="treatment">Treatment</string>
    <string name="description">Description</string>
    <string name="disease">Desease</string>
    <string name="send">Send</string>
    <string name="message_your_doctor">Message your doctor</string>
    <string name="title">Title</string>
    <string name="messages">Messages</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="book">BOOK</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="appointment_purpose">Select your appointement purpose</string>
    <string name="thank_you">Thank you for choosing our service !</string>
    <string name="appointment_information">Appointment information</string>
    <string name="time">9:00 - 9:30</string>
    <string name="available">Available</string>
    <string name="all">All</string>
    <string name="general">General</string>
    <string name="dentist">Dentist</string>
    <string name="orl">ORL</string>
    <string name="ophthalmology">Ophthalmology</string>
    <string name="pediatric">Pediatric</string>
    <string name="radiology">Radiology</string>
    <string name="rheumatology">Rheumatology</string>
    <string name="hospitalisation">Hospitalisation</string>
    <string name="patient_name">Patient name</string>
    <string name="_12_06_2020_at_9pm">12/06/2020 at 9pm</string>
    <string name="status">Status:</string>
    <string name="about_me">about me</string>
    <string name="consultation">Consultation</string>
    <string name="_23_06_20_at_9pm">23/06/20 at 9pm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="_0652167895">0652167895</string>
    <string name="want_to_be_your_patient">Want to be your patient</string>
    <string name="view_form">View Form</string>
    <string name="doctor_name">Doctor NAME</string>
    <string name="appointement_type">Appointement type</string>
    <string name="_5_00_pm">5:00 PM</string>
    <string name="doctor">Doctor</string>
    <string name="timming">Timming</string>
    <string name="wed">WED</string>
    <string name="_19">19</string>
    <string name="july">July</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="loading">Loading</string>
    <string name="call_doc">Call your doctor</string>
    <string name="text_doc">Chat with your doctor</string>
    <string name="chat_doc">Chat with your doctor</string>
    <string name="call_pat">Call your patient</string>
    <string name="chat_pat">Chat with your patient</string>
    <string name="pat_img">Patient profile image</string>
    <string name="message_icon">message icon</string>
    <string name="send_message">Type your message</string>
    <string name="terms">By using this app, you agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
</resources>