<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomeActivity">

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_danger"
        android:text="@string/sign_out"
        android:textColor="#C62828"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="215dp"
        android:background="@drawable/rectangle_round"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeUser"
            android:text="@string/welcome_user"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_option"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnMedicalFolder"
        android:layout_width="105dp"
        android:layout_height="96dp"
        android:background="@drawable/button_home"
        android:text="@string/medical_folder"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/myDoctors"
        android:layout_width="105dp"
        android:layout_height="96dp"
        android:background="@drawable/button_home"
        android:text="@string/my_doctors"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMedicalFolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMedicalFolder"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/appointment2"
        android:layout_width="105dp"
        android:layout_height="96dp"
        android:background="@drawable/button_home"
        android:text="@string/appointment"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMedicalFolder"
        app:layout_constraintTop_toBottomOf="@+id/btnMedicalFolder" />

    <Button
        android:id="@+id/profile"
        android:layout_width="105dp"
        android:layout_height="96dp"
        android:background="@drawable/button_home"
        android:text="@string/profile"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toStartOf="@+id/btnMedicalFolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedicalFolder" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="105dp"
        android:layout_height="96dp"
        android:background="@drawable/button_home"
        android:text="@string/search"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMedicalFolder"
        app:layout_constraintEnd_toStartOf="@+id/btnMedicalFolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>