<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".controller.FormActivity">
    <EditText
        android:id="@+id/disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"
        android:hint="@string/disease" />

    <EditText
        android:id="@+id/form_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"
        android:hint="@string/description"
        />

    <EditText
        android:id="@+id/treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"
        android:hint="@string/treatment"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/type"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/form_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:spinnerMode="dropdown"
        android:textColor="#000000">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/add_form_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_radius_primary_color"
            android:text="@string/add" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>