<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/cardview_light_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/doctor_item_image"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/doctor"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/doctor_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="87dp"
            android:layout_marginTop="11dp"
            android:maxLines="1"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/doctor_view_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="86dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="#B9B9B9" />

        <Button
            android:id="@+id/see_form_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_chat_black_24dp"
            android:contentDescription="@string/call_doc" />

        <Button
            android:id="@+id/callBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="60dp"
            android:background="@drawable/ic_call_black_24dp"
            android:contentDescription="@string/chat_doc" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>