<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        >

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="26dp"
            android:text="@string/patient_name"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/appointment_type"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/button_radius_accent_color"
            android:gravity="center"
            android:text="@string/hospitalisation"
            android:textColor="#fff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/patient_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="113dp"
            android:layout_marginTop="52dp"
            android:text="@string/phone"
            android:textColor="#B9B9B9"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/patient_image"
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="29dp"
            android:layout_marginBottom="26dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/ic_anon_user_48dp" />

        <TextView
            android:id="@+id/appointment_date"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="114dp"
            android:layout_marginTop="82dp"
            android:text="@string/_23_06_20_at_9pm"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>